#71 - Changed CLI using JCommander (needs doc)